feat: Introduce initial calendar application UI with mobile toolbar, daily/weekly views, and main page.

--- a/1-develop_doc/0-问答记录.md
+++ b/1-develop_doc/0-问答记录.md
@@ -1686,7 +1686,30 @@ The easiest free online schedule builder. Drag-and-drop interface, instant expor
 
 这样的话，对SEO是不是仍然是友好的？
 
+# 37.
 
+执行一下如下内容：
+
+> # Install our package
+>
+> Start by installing @vercel/analytics in your existing project.
+>
+> ```
+> npm i @vercel/analytics
+> ```
+>
+> ## Add the React component
+>
+> Import and use the `<Analytics/>` React component into your app's layout.
+>
+> ```
+> import { Analytics } from "@vercel/analytics/next"
+> ```
+> # Deploy & Visit your Site
+>
+> Deploy your changes and visit the deployment to collect your page views.
+>
+> If you don't see data after 30 seconds, please check for content blockers and try to navigate between pages on your site.
 
 
 
