docs: Add new blog post "5 Common Scheduling Mistakes and How to Avoid Them".

--- a/1-develop_doc/0-问答记录.md
+++ b/1-develop_doc/0-问答记录.md
@@ -1711,7 +1711,14 @@ The easiest free online schedule builder. Drag-and-drop interface, instant expor
 >
 > If you don't see data after 30 seconds, please check for content blockers and try to navigate between pages on your site.
 
+# 38.Q
 
+1、**指导文件中引用了图片 URL**，那个图片现在是不存在的。你需要创建一个图片
+
+2、在需要完成的任务里再添加以下两项：
+
+- 在博客文章中，增加内链接指向这个模板页
+- Unique Feature Suggestions，这个你先完成上面的任务，关于这部分的实现，到时候咱们讨论一下
 
 
 
