--- a/posts/scheduling-mistakes.mdx
+++ b/posts/scheduling-mistakes.mdx
@@ -36,7 +36,7 @@ Here are the five most common scheduling pitfalls and the professional strategie
 
 **The Mistake:** Keeping schedules in your head, on scattered sticky notes, or in outdated spreadsheets, leading to inevitable miscommunication. 
 
-**The Solution:** Use a centralized, visual tool like **TrySchedule** that every team member can access in real-time. Document the reasoning behind major scheduling decisions to create a searchable record for future reference. 
+**The Solution:** Use a centralized, visual tool like **TrySchedule** that every team member can access in real-time. To avoid these mistakes, try our **[Free Employee Schedule Builder](https://www.tryschedule.com/templates/employee-schedule-builder)**. Document the reasoning behind major scheduling decisions to create a searchable record for future reference. 
 
 ## 5. Failing to Plan for Absences
 
