feat: Implement new blog posts, product and blog images, a dynamic blog page, and core navigation and SEO components.

--- a/posts/acme-case-study.mdx
+++ b/posts/acme-case-study.mdx
@@ -40,7 +40,7 @@ Acme introduced new cultural norms to protect employee time:
 - **Agenda-First Policy:** No agenda, no meeting.
 
 ### Phase 3: TrySchedule Integration
-The **TrySchedule Builder** became the central hub for Acme’s organization. Key features used include:
+The **TrySchedule Schedule Builder** became the central hub for Acme’s organization. Key features used include:
 - **Smart Conflict Detection:** Reducing the back-and-forth of finding free slots.
 - **Visual Time Blocking:** Helping managers see "Focus Time" vs. "Meeting Time" at a glance.
 - **Meeting Cost Awareness:** Showing the aggregate time-value of large group invites.
@@ -65,4 +65,4 @@ After 90 days of using **TrySchedule**, the results exceeded all expectations:
 
 Don't let your team drown in meetings. Whether you're a startup or an established enterprise, smart scheduling can transform your productivity.
 
-**[TrySchedule for Free](https://www.tryschedule.com/templates)** to see how our visual builder can help your team focus on what matters most.
+**[TrySchedule for Free](https://www.tryschedule.com)** to see how our schedule builder can help your team focus on what matters most.
