--- a/posts/async-communication.mdx
+++ b/posts/async-communication.mdx
@@ -7,7 +7,7 @@ readTime: "8 min read"
 excerpt: "Discover how async communication can transform your team's productivity and reduce meeting fatigue. Learn to master deep work with TrySchedule."
 coverImage: "/blog/async-cover.png"
 author: "Jane Doe"
-featured: true
+featured: false
 ---
 
 In today's fast-paced, globally distributed work environment, mastering **asynchronous communication** is no longer a luxury—it's a necessity for high-performing teams. 
@@ -48,7 +48,7 @@ Here are some tools that can help your team embrace the async revolution:
 - **Loom:** Record quick video messages instead of scheduling meetings.
 - **Notion:** Create a shared, "living" knowledge base for documentation.
 - **Slack:** Use threads and scheduled messages to keep discussions organized.
-- **TrySchedule:** Use our **[Visual Schedule Builder](https://www.tryschedule.com/templates)** to plan your team's focus blocks and "No-Meeting" zones without endless coordination.
+- **TrySchedule:** Use our **[Schedule Builder](https://www.tryschedule.com)** to plan your team's focus blocks and "No-Meeting" zones without endless coordination.
 
 ## Conclusion
 
