--- a/posts/remote-work-best-practices.mdx
+++ b/posts/remote-work-best-practices.mdx
@@ -16,7 +16,7 @@ Here is how you can optimize your remote work experience and lead a high-perform
 
 ## Setting Up Your Workspace for Success
 
-A dedicated, distraction-free workspace is the cornerstone of productivity.  Even if you do not have a separate home office, designating a specific area for work helps create a critical mental boundary between your professional and personal life. [cite: 59, 60]
+A dedicated, distraction-free workspace is the cornerstone of productivity.  Even if you do not have a separate home office, designating a specific area for work helps create a critical mental boundary between your professional and personal life. 
 
 ### Essential Equipment for Your Home Office
 
@@ -48,7 +48,7 @@ The line between work and home life easily blurs when your office is only steps 
 
 The right tech stack makes all the difference in a distributed environment:
 
-- **TrySchedule:** Use our **[Visual Schedule Builder](https://www.tryschedule.com/templates)** for seamless coordination across team time zones.
+- **TrySchedule:** Use our **[Schedule Builder](https://www.tryschedule.com)** for seamless coordination across team time zones.
 - **Video Conferencing:** For face-to-face connections that build trust and rapport.
 - **Project Management:** To keep everyone aligned on priorities and long-term roadmaps.
 - **Virtual Whiteboards:** For collaborative brainstorming and real-time creative sessions.
