feat: introduce daily and weekly calendar components with event rendering and interaction capabilities

--- a/1-develop_doc/0-问答记录.md
+++ b/1-develop_doc/0-问答记录.md
@@ -1720,5 +1720,18 @@ The easiest free online schedule builder. Drag-and-drop interface, instant expor
 - 在博客文章中，增加内链接指向这个模板页
 - Unique Feature Suggestions，这个你先完成上面的任务，关于这部分的实现，到时候咱们讨论一下
 
+# 39.Q
+
+![image-20251228131951645](./assets/image-20251228131951645.png)
+
+注意以下我说的改动仅适用于移动端的周视图；移动端的日式图、桌面端的日视图和周视图的显示效果不要改动。
+
+1. SM、MD、LG、XL、XXL卡片里的字体大小都调整为xs里的字体大小
+2. 对于宽度范围内无法完全显示的内容，要进行换行显示，如果卡片空间不支持任何换行显示，则忽略：
+   - 优先保证title换行显示；
+   - 如果title换行显示之后，还有多余空空间，则显示时间time。如果time在宽度范围内无法完全显示，则对time进行换行显示；
+   - 如果time换行显示之后，还有多余空空间，则显示Description。如果Description在宽度范围内无法完全显示，则对Description进行换行显示。
+   - 如果已经无法换行了，则忽略。
+
 
 
