feat: Define schedule templates with various configurations and create a dedicated page to display them.

--- a/0-Develop_Doc/0-项目问答记录.md
+++ b/0-Develop_Doc/0-项目问答记录.md
@@ -1733,5 +1733,19 @@ The easiest free online schedule builder. Drag-and-drop interface, instant expor
    - 如果time换行显示之后，还有多余空空间，则显示Description。如果Description在宽度范围内无法完全显示，则对Description进行换行显示。
    - 如果已经无法换行了，则忽略。
 
+# 40.Q
+
+检查一下以下这个项目：
+
+> ## 规范链接 (`Canonical Tags`)
+>
+> 防止 Google 把 `tryschedule.com` 和 `www.tryschedule.com` 当成两个网站，导致权重分散。
+>
+> - **配置：** 在 `app/layout.tsx` 的 `metadata` 对象中添加 `metadataBase` 和 `alternates`
+
+## A
+
+我已经检查了项目的规范化标签。我发现虽然metadataBase已经正确设置为https://www.tryschedule.com，但是alternates配置缺失了。我已经将它添加到app/layout.tsx中，以确保搜索引擎正确识别www版本为主域名，防止SEO权重分散
+
 
 
