--- a/0-Develop_Doc/落地页/落地页的20个关键词.md
+++ b/0-Develop_Doc/落地页/落地页的20个关键词.md
@@ -10,37 +10,37 @@
 
 **特点：** 搜索量中等，但 CPC 高，用户通常是经理或企业主，转化意愿强（适合做 Affiliate 推荐 Monday.com 或 ClickUp）。
 
-| **关键词 (Keyword)**                 | **用户意图分析**   | **落地页差异化建议 (Dev Tip)**            |
-| ------------------------------------ | ------------------ | ----------------------------------------- |
-| **1. Employee schedule builder**     | 寻找排班软件的经理 | 默认模板设置为“员工姓名+早/中/晚班”格式。 |
-| **2. Work shift schedule builder**   | 同上，侧重倒班制   | 增加“轮班逻辑”或“夜班”高亮功能。          |
-| **3. Staff roster maker**            | 英国/澳洲常用词汇  | 针对地理位置优化，使用英式英语拼写。      |
-| **4. 24/7 shift schedule builder**   | 工厂/医院排班      | 预设 24 小时网格，而不是朝九晚五。        |
-| **5. Construction schedule builder** | 建筑项目管理       | 强调甘特图视图 (Gantt View) 或按周进度。  |
+| **关键词 (Keyword)**                      | **用户意图分析**   | **落地页差异化建议 (Dev Tip)**            |
+| ----------------------------------------- | ------------------ | ----------------------------------------- |
+| <s>**1. Employee schedule builder**</s>   | 寻找排班软件的经理 | 默认模板设置为“员工姓名+早/中/晚班”格式。 |
+| <s>**2. Work shift schedule builder**</s> | 寻找排班软件的经理 | 增加“轮班逻辑”或“夜班”高亮功能。          |
+| **3. Staff roster maker**                 | 英国/澳洲常用词汇  | 针对地理位置优化，使用英式英语拼写。      |
+| **4. 24/7 shift schedule builder**        | 工厂/医院排班      | 预设 24 小时网格，而不是朝九晚五。        |
+| **5. Construction schedule builder**      | 建筑项目管理       | 强调甘特图视图 (Gantt View) 或按周进度。  |
 
 #### 第二类：高流量入口 (教育/学生方向)
 
 **特点：** 搜索量巨大，具有极强的季节性（开学季流量暴涨），易于传播。
 
-| **关键词 (Keyword)**                  | **用户意图分析** | **落地页差异化建议 (Dev Tip)**               |
-| ------------------------------------- | ---------------- | -------------------------------------------- |
-| **6. College class schedule builder** | 大学生规划选课   | 预设周一至周五视图，时间粒度细化到 15 分钟。 |
-| **7. Homeschool schedule builder**    | 在家教育的家长   | 风格偏温馨，预设“数学、阅读、休息”等科目。   |
-| **8. Study schedule maker**           | 备考学生         | 增加“番茄钟”或“复习间隔”概念的文案。         |
-| **9. High school schedule builder**   | 高中生           | 7 节课/天 的标准模板。                       |
-| **10. Semester planner online**       | 长期规划         | 视图从“周视图”改为“月视图”或“学期视图”。     |
+| **关键词 (Keyword)**                         | **用户意图分析** | **落地页差异化建议 (Dev Tip)**               |
+| -------------------------------------------- | ---------------- | -------------------------------------------- |
+| <s>**6. College class schedule builder**</s> | 大学生规划选课   | 预设周一至周五视图，时间粒度细化到 15 分钟。 |
+| **7. Homeschool schedule builder**           | 在家教育的家长   | 风格偏温馨，预设“数学、阅读、休息”等科目。   |
+| **8. Study schedule maker**                  | 备考学生         | 增加“番茄钟”或“复习间隔”概念的文案。         |
+| **9. High school schedule builder**          | 高中生           | 7 节课/天 的标准模板。                       |
+| **10. Semester planner online**              | 长期规划         | 视图从“周视图”改为“月视图”或“学期视图”。     |
 
 #### 第三类：高粘性利基市场 (生活/个人管理)
 
 **特点：** 竞争极小（KD < 10），用户停留时间长，容易形成口碑。
 
-| **关键词 (Keyword)**                | **用户意图分析**  | **落地页差异化建议 (Dev Tip)**                 |
-| ----------------------------------- | ----------------- | ---------------------------------------------- |
-| **11. Workout schedule builder**    | 健身人群          | 预设“胸肌、背部、有氧”等标签，移动端要极好用。 |
-| **12. Cleaning schedule builder**   | 家庭主妇/合租室友 | 提供可打印 (Printable) 的 CheckList 样式。     |
-| **13. Daily routine builder**       | 自律/ADHD 人群    | 视觉要简单清晰，减少干扰元素。                 |
-| **14. Baby sleep schedule creator** | 新手父母          | 强调科学作息，提供不同月龄的模板。             |
-| **15. Wedding timeline builder**    | 备婚人群          | 倒计时模式，按时间点（如 9:00 接亲）排列。     |
+| **关键词 (Keyword)**                    | **用户意图分析**  | **落地页差异化建议 (Dev Tip)**                 |
+| --------------------------------------- | ----------------- | ---------------------------------------------- |
+| <s>**11. Workout schedule builder**</s> | 健身人群          | 预设“胸肌、背部、有氧”等标签，移动端要极好用。 |
+| **12. Cleaning schedule builder**       | 家庭主妇/合租室友 | 提供可打印 (Printable) 的 CheckList 样式。     |
+| **13. Daily routine builder**           | 自律/ADHD 人群    | 视觉要简单清晰，减少干扰元素。                 |
+| **14. Baby sleep schedule creator**     | 新手父母          | 强调科学作息，提供不同月龄的模板。             |
+| **15. Wedding timeline builder**        | 备婚人群          | 倒计时模式，按时间点（如 9:00 接亲）排列。     |
 
 #### 第四类：功能与格式特定 (技术属性)
 
@@ -48,9 +48,9 @@
 
 | **关键词 (Keyword)**                    | **用户意图分析**      | **落地页差异化建议 (Dev Tip)**                     |
 | --------------------------------------- | --------------------- | -------------------------------------------------- |
-| **16. Visual schedule builder**         | 需要可视化/图片化     | 强调图标 (Icons) 和颜色编码功能。                  |
+| <s>**16. Visual schedule builder**</s>  | 需要可视化/图片化     | 强调图标 (Icons) 和颜色编码功能。                  |
 | **17. Printable schedule maker**        | 需要纸质版            | 按钮突出“Download PDF”，并优化打印样式 CSS。       |
-| **18. AI schedule generator**           | **(蓝海)** 追逐新技术 | 哪怕只是简单的规则生成，加上“AI”标签点击率会翻倍。 |
+| <s>**18. AI schedule generator**</s>    | **(蓝海)** 追逐新技术 | 哪怕只是简单的规则生成，加上“AI”标签点击率会翻倍。 |
 | **19. Weekly schedule template editor** | 寻找可编辑模板        | 侧重于“可编辑性”和“保存”。                         |
 | **20. Block schedule builder**          | 特定时间管理法        | 支持 Time Blocking（时间块）布局。                 |
 
