--- a/0-Develop_Doc/落地页/落地页的20个关键词.md
+++ b/0-Develop_Doc/落地页/落地页的20个关键词.md
@@ -25,7 +25,7 @@
 | **关键词 (Keyword)**                         | **用户意图分析** | **落地页差异化建议 (Dev Tip)**               |
 | -------------------------------------------- | ---------------- | -------------------------------------------- |
 | <s>**6. College class schedule builder**</s> | 大学生规划选课   | 预设周一至周五视图，时间粒度细化到 15 分钟。 |
-| **7. Homeschool schedule builder**           | 在家教育的家长   | 风格偏温馨，预设“数学、阅读、休息”等科目。   |
+| <s>**7. Homeschool schedule builder**</s>    | 在家教育的家长   | 风格偏温馨，预设“数学、阅读、休息”等科目。   |
 | **8. Study schedule maker**                  | 备考学生         | 增加“番茄钟”或“复习间隔”概念的文案。         |
 | **9. High school schedule builder**          | 高中生           | 7 节课/天 的标准模板。                       |
 | **10. Semester planner online**              | 长期规划         | 视图从“周视图”改为“月视图”或“学期视图”。     |
@@ -34,13 +34,13 @@
 
 **特点：** 竞争极小（KD < 10），用户停留时间长，容易形成口碑。
 
-| **关键词 (Keyword)**                    | **用户意图分析**  | **落地页差异化建议 (Dev Tip)**                 |
-| --------------------------------------- | ----------------- | ---------------------------------------------- |
-| <s>**11. Workout schedule builder**</s> | 健身人群          | 预设“胸肌、背部、有氧”等标签，移动端要极好用。 |
-| **12. Cleaning schedule builder**       | 家庭主妇/合租室友 | 提供可打印 (Printable) 的 CheckList 样式。     |
-| **13. Daily routine builder**           | 自律/ADHD 人群    | 视觉要简单清晰，减少干扰元素。                 |
-| **14. Baby sleep schedule creator**     | 新手父母          | 强调科学作息，提供不同月龄的模板。             |
-| **15. Wedding timeline builder**        | 备婚人群          | 倒计时模式，按时间点（如 9:00 接亲）排列。     |
+| **关键词 (Keyword)**                     | **用户意图分析**  | **落地页差异化建议 (Dev Tip)**                 |
+| ---------------------------------------- | ----------------- | ---------------------------------------------- |
+| <s>**11. Workout schedule builder**</s>  | 健身人群          | 预设“胸肌、背部、有氧”等标签，移动端要极好用。 |
+| <s>**12. Cleaning schedule builder**</s> | 家庭主妇/合租室友 | 提供可打印 (Printable) 的 CheckList 样式。     |
+| **13. Daily routine builder**            | 自律/ADHD 人群    | 视觉要简单清晰，减少干扰元素。                 |
+| **14. Baby sleep schedule creator**      | 新手父母          | 强调科学作息，提供不同月龄的模板。             |
+| **15. Wedding timeline builder**         | 备婚人群          | 倒计时模式，按时间点（如 9:00 接亲）排列。     |
 
 #### 第四类：功能与格式特定 (技术属性)
 
