feat: establish initial application structure with core pages, navigation, calendar components, and utility modules.

--- a/0-Develop_Doc/落地页/落地页的20个关键词.md
+++ b/0-Develop_Doc/落地页/落地页的20个关键词.md
@@ -10,13 +10,13 @@
 
 **特点：** 搜索量中等，但 CPC 高，用户通常是经理或企业主，转化意愿强（适合做 Affiliate 推荐 Monday.com 或 ClickUp）。
 
-| **关键词 (Keyword)**                      | **用户意图分析**   | **落地页差异化建议 (Dev Tip)**            |
-| ----------------------------------------- | ------------------ | ----------------------------------------- |
-| <s>**1. Employee schedule builder**</s>   | 寻找排班软件的经理 | 默认模板设置为“员工姓名+早/中/晚班”格式。 |
-| <s>**2. Work shift schedule builder**</s> | 寻找排班软件的经理 | 增加“轮班逻辑”或“夜班”高亮功能。          |
-| **3. Staff roster maker**                 | 英国/澳洲常用词汇  | 针对地理位置优化，使用英式英语拼写。      |
-| **4. 24/7 shift schedule builder**        | 工厂/医院排班      | 预设 24 小时网格，而不是朝九晚五。        |
-| **5. Construction schedule builder**      | 建筑项目管理       | 强调甘特图视图 (Gantt View) 或按周进度。  |
+| **关键词 (Keyword)**                        | **用户意图分析**   | **落地页差异化建议 (Dev Tip)**            |
+| ------------------------------------------- | ------------------ | ----------------------------------------- |
+| <s>**1. Employee schedule builder**</s>     | 寻找排班软件的经理 | 默认模板设置为“员工姓名+早/中/晚班”格式。 |
+| <s>**2. Work shift schedule builder**</s>   | 寻找排班软件的经理 | 增加“轮班逻辑”或“夜班”高亮功能。          |
+| **3. Staff roster maker**                   | 英国/澳洲常用词汇  | 针对地理位置优化，使用英式英语拼写。      |
+| **4. 24/7 shift schedule builder**          | 工厂/医院排班      | 预设 24 小时网格，而不是朝九晚五。        |
+| <s>**5. Construction schedule builder**</s> | 建筑项目管理       | 强调甘特图视图 (Gantt View) 或按周进度。  |
 
 #### 第二类：高流量入口 (教育/学生方向)
 
