--- a/0-Develop_Doc/0-项目问答记录.md
+++ b/0-Develop_Doc/0-项目问答记录.md
@@ -1783,5 +1783,30 @@ The easiest free online schedule builder. Drag-and-drop interface, instant expor
 允许切换 - 保持冲突不变，但冲突检测将应用于未来的编辑/添加
 推荐：选项2（允许切换）。现有冲突保持不变，但任何新操作都会触发冲突检测。
 
+# 42.Q
+
+> 我说一下我的一个想法，就是说现在的事件卡片跟事件卡片之间可以通过哪些方式来进行区分？
+>
+> # 一、可以通过settings来进行区分
+>
+> - Start week on Sunday、12-hour format (AM/PM)、Show dates、Time increment、Working hours
+> - settings后面可能也会增加其他的选项
+>
+> # 二、可以通过事件卡片来进行区分
+>
+> - 这个就是通过事件卡片的特性来进行区分了
+> - 也许以后事件卡片的特性还会进行扩充
+>
+> # 三、可以通过侧边栏的选装组件来进行区分
+>
+> - 从理论上来说，以后不同的模板可以装配不同的组件，这样的话，每个模板就属于自己独特的定制功能。
+> - 比如说，Cleaning Schedule Builder模板的task mode off/on 功能；AI Schedule Builder模板的priority mode off/on功能，但我认为这个功能并不适用于AI模板
+> - 可以为不同的模板定制不同的组件
+>
+> # 四、AI auto fill是现在每个模板都有的一个特性，不是AI schedule builder独享的功能
+>
+> - 我当前想把AI auto fill这个功能作为每个模板都保留的一个特性吧，这样也算是追赶当前的一个AI热潮。
+> - 但是，如果是AI模板的话，把AI auto filll做得更明显也是可以的。就比如说，你刚刚说的一个空白模板加上一个自动弹出的AI auto fill的弹窗
+
 
 
