修改标签位置以及移动端适配问题

--- a/0-Develop_Doc/宣传文案.md
+++ b/0-Develop_Doc/宣传文案.md
@@ -35,7 +35,7 @@
 2. **所见即所得**：我们的 Visual Builder 让您能直观地看到团队的时间分配。
 3. **行业深度定制**：无论是建筑工地的轮班，还是大学生课表，我们都有专门优化的逻辑和模板。
 
-目前我们在 Product Hunt 正式上线，非常期待听到您的反馈！
+目前产品已经正式上线，非常期待听到您的反馈！
 
 访问地址：https://www.tryschedule.com/
 
@@ -97,7 +97,7 @@ That’s why I built **TrySchedule**:
 2. **What You See Is What You Get**: Our Visual Builder gives you a clear view of your team's time distribution.
 3. **Industry-Specific Logic**: We’ve optimized templates specifically for Construction shifts, Cleaning rotations, and College timetables.
 
-We are currently live on Product Hunt! I’d love to get your feedback and support.
+The product has now been officially launched, and we are very much looking forward to hearing your feedback!
 
 Check us out: https://www.tryschedule.com/
 
