feat: convert images to WebP format and update references in MDX and pricing page

--- a/posts/acme-case-study.mdx
+++ b/posts/acme-case-study.mdx
@@ -5,7 +5,7 @@ category: "Case Studies"
 date: "2025-12-25"
 readTime: "7 min read"
 excerpt: "Discover how Acme Corporation transformed their meeting culture and reclaimed 9+ hours per week using smart scheduling strategies."
-coverImage: "/blog/case-study-cover.png"
+coverImage: "/blog/case-study-cover.webp"
 author: "Emily Roberts"
 featured: false
 ---
