--- a/posts/async-communication.mdx
+++ b/posts/async-communication.mdx
@@ -5,7 +5,7 @@ category: "Productivity Tips"
 date: "2025-12-25"
 readTime: "8 min read"
 excerpt: "Discover how async communication can transform your team's productivity and reduce meeting fatigue. Learn to master deep work with TrySchedule."
-coverImage: "/blog/async-cover.png"
+coverImage: "/blog/async-cover.webp"
 author: "Jane Doe"
 featured: false
 ---
