--- a/posts/es/acme-case-study.mdx
+++ b/posts/es/acme-case-study.mdx
@@ -7,7 +7,7 @@ readTime: 7 min read
 excerpt: >-
   Descubre cómo Acme Corporation transformó su cultura de reuniones y recuperó
   más de 9 horas por semana utilizando estrategias de programación inteligentes.
-coverImage: /blog/case-study-cover.png
+coverImage: /blog/case-study-cover.webp
 author: Emily Roberts
 featured: false
 ---
