--- a/posts/es/async-communication.mdx
+++ b/posts/es/async-communication.mdx
@@ -8,7 +8,7 @@ excerpt: >-
   Descubre cómo la comunicación asíncrona puede transformar la productividad de
   tu equipo y reducir la fatiga de las reuniones. Aprende a dominar el trabajo
   profundo con TrySchedule.
-coverImage: /blog/async-cover.png
+coverImage: /blog/async-cover.webp
 author: Jane Doe
 featured: false
 ---
