--- a/posts/es/employee-scheduling-guide.mdx
+++ b/posts/es/employee-scheduling-guide.mdx
@@ -8,7 +8,7 @@ excerpt: >-
   Domina las complejidades de la gestión de equipos moderna con nuestra guía de
   2025. Aprenda cómo TrySchedule ayuda a eliminar los conflictos de programación
   y a aumentar la moral.
-coverImage: /blog/scheduling-guide-cover.png
+coverImage: /blog/scheduling-guide-cover.webp
 author: TrySchedule Team
 featured: false
 ---
