--- a/posts/es/how-to-use-schedule-builder.mdx
+++ b/posts/es/how-to-use-schedule-builder.mdx
@@ -8,7 +8,7 @@ excerpt: >-
   Transforme su flujo de trabajo al dominar la programación visual. Aprenda cómo
   un creador de horarios profesional puede ahorrar horas y reducir la fatiga
   mental.
-coverImage: /blog/productivity-guide.png
+coverImage: /blog/productivity-guide.webp
 author: TrySchedule Team
 featured: false
 ---
