--- a/posts/es/remote-work-best-practices.mdx
+++ b/posts/es/remote-work-best-practices.mdx
@@ -8,7 +8,7 @@ excerpt: >-
   Domina el arte de la colaboración remota con estrategias comprobadas para
   mantenerse productivo y conectado. Descubre cómo TrySchedule ayuda a los
   equipos distribuidos a sincronizarse sin esfuerzo.
-coverImage: /blog/remote-work-cover.png
+coverImage: /blog/remote-work-cover.webp
 author: Lisa Wang
 featured: false
 ---
