--- a/posts/es/scheduling-mistakes.mdx
+++ b/posts/es/scheduling-mistakes.mdx
@@ -8,7 +8,7 @@ excerpt: >-
   Aprenda sobre las trampas comunes de la programación, desde la
   sobreprogramación hasta la mala documentación, y estrategias prácticas para
   superarlas con TrySchedule.
-coverImage: /blog/scheduling-mistakes-cover.png
+coverImage: /blog/scheduling-mistakes-cover.webp
 author: Sarah Johnson
 featured: false
 ---
