--- a/posts/es/tagging-system.mdx
+++ b/posts/es/tagging-system.mdx
@@ -8,7 +8,7 @@ excerpt: >-
   Organice sus eventos con nuestra nueva y poderosa función de etiquetado.
   Descubra cómo las etiquetas flexibles de TrySchedule transforman sus análisis
   de flujo de trabajo y tiempo.
-coverImage: /blog/tagging-cover.png
+coverImage: /blog/tagging-cover.webp
 author: David Park
 featured: false
 ---
