--- a/posts/es/time-saving-features.mdx
+++ b/posts/es/time-saving-features.mdx
@@ -8,7 +8,7 @@ excerpt: >-
   Descubre 9 poderosas características ocultas en TrySchedule que te pueden
   ahorrar horas cada semana. De plantillas inteligentes a sugerencias de IA,
   comience a trabajar de manera más inteligente hoy.
-coverImage: /blog/time-saving-cover.png
+coverImage: /blog/time-saving-cover.webp
 author: John Smith
 featured: false
 ---
