--- a/posts/es/top-10-free-roster-makers-2025.mdx
+++ b/posts/es/top-10-free-roster-makers-2025.mdx
@@ -8,7 +8,7 @@ excerpt: >-
   Encontrar la herramienta de programación de empleados adecuada no debería ser
   caro. Explora los 10 mejores creadores de listas gratuitas en 2025, comenzando
   con TrySchedule.
-coverImage: /blog/top-roster-makers.png
+coverImage: /blog/top-roster-makers.webp
 author: TrySchedule Team
 featured: true
 ---
