--- a/posts/how-to-use-schedule-builder.mdx
+++ b/posts/how-to-use-schedule-builder.mdx
@@ -5,7 +5,7 @@ category: "Productivity Tips"
 date: "2025-12-27"
 readTime: "7 min read"
 excerpt: "Transform your workflow by mastering visual scheduling. Learn how a professional schedule builder can save hours and reduce mental fatigue."
-coverImage: "/blog/productivity-guide.png"
+coverImage: "/blog/productivity-guide.webp"
 author: "TrySchedule Team"
 featured: false
 ---
