--- a/posts/remote-work-best-practices.mdx
+++ b/posts/remote-work-best-practices.mdx
@@ -5,7 +5,7 @@ category: "Productivity Tips"
 date: "2025-12-25"
 readTime: "5 min read"
 excerpt: "Master the art of remote collaboration with proven strategies for staying productive and connected. Discover how TrySchedule helps distributed teams sync effortlessly."
-coverImage: "/blog/remote-work-cover.png"
+coverImage: "/blog/remote-work-cover.webp"
 author: "Lisa Wang"
 featured: false
 ---
