--- a/posts/scheduling-mistakes.mdx
+++ b/posts/scheduling-mistakes.mdx
@@ -5,7 +5,7 @@ category: "Productivity Tips"
 date: "2025-12-25"
 readTime: "6 min read"
 excerpt: "Learn about common scheduling pitfalls—from overscheduling to poor documentation—and practical strategies to overcome them with TrySchedule."
-coverImage: "/blog/scheduling-mistakes-cover.png"
+coverImage: "/blog/scheduling-mistakes-cover.webp"
 author: "Sarah Johnson"
 featured: false
 ---
