--- a/posts/employee-scheduling-guide.mdx
+++ b/posts/employee-scheduling-guide.mdx
@@ -5,7 +5,7 @@ category: "Productivity Tips"
 date: "2025-12-27"
 readTime: "10 min read"
 excerpt: "Master the complexities of modern team management with our 2025 guide. Learn how TrySchedule helps eliminate scheduling conflicts and boost morale."
-coverImage: "/blog/scheduling-guide-cover.png"
+coverImage: "/blog/scheduling-guide-cover.webp"
 author: "TrySchedule Team"
 featured: false
 ---
