--- a/posts/tagging-system.mdx
+++ b/posts/tagging-system.mdx
@@ -5,7 +5,7 @@ category: "Product Updates"
 date: "2025-12-25"
 readTime: "5 min read"
 excerpt: "Organize your events with our powerful new tagging feature. Learn how TrySchedule's flexible tags transform your workflow and time analytics."
-coverImage: "/blog/tagging-cover.png"
+coverImage: "/blog/tagging-cover.webp"
 author: "David Park"
 featured: false
 ---
