--- a/posts/time-saving-features.mdx
+++ b/posts/time-saving-features.mdx
@@ -5,7 +5,7 @@ category: "Productivity Tips"
 date: "2025-12-25"
 readTime: "6 min read"
 excerpt: "Uncover 9 powerful hidden features in TrySchedule that can save you hours every week. From smart templates to AI suggestions, start working smarter today."
-coverImage: "/blog/time-saving-cover.png"
+coverImage: "/blog/time-saving-cover.webp"
 author: "John Smith"
 featured: false
 ---
