--- a/posts/top-10-free-roster-makers-2025.mdx
+++ b/posts/top-10-free-roster-makers-2025.mdx
@@ -5,7 +5,7 @@ category: "Productivity Tips"
 date: "2025-12-27"
 readTime: "9 min read"
 excerpt: "Finding the right employee scheduling tool shouldn't be expensive. Explore the top 10 free roster makers in 2025, starting with TrySchedule."
-coverImage: "/blog/top-roster-makers.png"
+coverImage: "/blog/top-roster-makers.webp"
 author: "TrySchedule Team"
 featured: true
 ---
